<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePasswordActivity"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:autofillHints="@string/auto_fill_email_hint"
        android:ems="10"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/repeat_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/auto_fill_email_hint"
        android:ems="10"
        android:hint="@string/repeat_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <Button
        android:id="@+id/update_password_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:text="@string/button_update_password_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/repeat_new_password"
        tools:layout_editor_absoluteX="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <ImageView
        android:id="@+id/arrow_left_third"
        android:layout_width="43dp"
        android:layout_height="31dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/exit_app"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />

</androidx.constraintlayout.widget.ConstraintLayout>
